# nysci-mass-transit

./: .gitignore  .gitmodules  CMakeLists.txt  codes.txt  config.xml.example  environment.env  schema.md  todo
conf/: CMakeLists.txt
conf/src/: calibrate.cpp  common.h  deviceEnumeration.cpp  features.cpp  main.cpp  thresholds.cpp
include/: conf.h  conf_common.h  config.h  main_common.h  processing.h
main/: CMakeLists.txt  calibration.xml  notes.md
main/src/: calibration.cpp  calibration.h  lines.cpp  test.cpp
src/: camConfig.json  colors.cpp  config-circles.bat  config-projection.bat  config.cpp  config.json  config.json.bak  configuration.py  configureCircles.py  configureProjection.py  decode.py  decodeMangled.py  decodeV2.py  detect.py  dump-markers.cpp  generateDefaultConfig.py  layout-test.cpp  processing.cpp  projectionConfiguration.py  runegen.cpp
src/conf/: common.cpp  configureCalibration.cpp  configureCircleParams.cpp  configureColors.cpp  configureProjection.cpp  configureVideoDevice.cpp  main.cpp
src/main/: color.cpp  main.cpp
